--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                   <li class="nav_items">
                     <a href="#skills" class="nav_link active">Skills</a>
                   </li>
-                  <li class="nav_items">
+                  <!-- <li class="nav_items">
                     <a href="#work" class="nav_link active">Projects</a>
-                  </li>
+                  </li> -->
                   <li class="nav_items">
                     <a href="#contact" class="nav_link active">Contact</a>
                   </li>
